--- a/index.html
+++ b/index.html
@@ -2,24 +2,28 @@
 <html lang="en">
     <head>
      <title>Alana M. McCray</title>
-     <link rel="stylesheet" href="styles/style.css" />
-   </head>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css" />
+</head>
 
     <body>
         <!--Header-->
 
         <header>
             <h1>Alana M. McCray</h1>
-            <a href="#">Home</a>
-            <a href="#">Resume</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
+            <h2>Student| Future Knight| Animal Lover</h2>
+            <a href="contact.html">Contact</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="resume.html">Resume</a>
+            <a class="active" href="index.html">Home</a>
         </header>
 
         <!--Main-->
 
         <article>
-            <h2>About Me:</h2>
+            <h1>About Me:</h1>
 
             <p>
                 My name is Alana McCray.
@@ -33,7 +37,12 @@
         </article>
 
         <footer>
-           <p>Alana M. McCray</p>
+           <p>	©Alana M. McCray</p>
+            <a href="#">Resume</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Contact</a>
+            <a class="active" href="#">Home</a>
         </footer>
     </body>
    <html
+
