--- a/contact.html
+++ b/contact.html
@@ -23,25 +23,16 @@
         <!--Main-->
 
         <article>
-            <h1>About Me:</h1>
+            <h1>Contact:</h1>
 
-            <p>
-                My name is Alana McCray.
-                <br />
-                Im from South Florida.I speak english but im studying spanish.I am currently enrolled at JP Taravella
-                High School.I am in the 9th grade.
-                <br />
-                I am creative, and work well with other people.I enjoy learning new things, and im also patient when
-                tasks get challenging.
-            </p>
-        </article>
+           
 
         <footer>
            <p>	©Alana M. McCray</p>
-            <a href="#">Resume</a>
+            <a class="active" href="contact.html">Contact</a>
             <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
-            <a class="active" href="#">Home</a>
+             <a href="#">Resume</a>
+            <a href="index.html">Home</a>
         </footer>
     </body>
    <html
