--- a/portfolio.html
+++ b/portfolio.html
@@ -23,25 +23,65 @@
         <!--Main-->
 
         <article>
-            <h1>About Me:</h1>
+           <h1>Portfolio:</h1>
+            <h2>Projects:</h2>
 
-            <p>
-                My name is Alana McCray.
-                <br />
-                Im from South Florida.I speak english but im studying spanish.I am currently enrolled at JP Taravella
-                High School.I am in the 9th grade.
-                <br />
-                I am creative, and work well with other people.I enjoy learning new things, and im also patient when
-                tasks get challenging.
-            </p>
+         <div class="row">
+            <div class="column">
+               <div class="content">
+                <img src="imgs/template.png" alt="Placeholder" style="width: 100%"/>
+                <h3> loading</h3>
+                <p>loading </p>
+               </div>
+           </div>
+
+           <div class="column">
+            <div class="content">
+             <img src="imgs/template.png" alt="Placeholder" style="width: 100%">
+             <h3>loading</h3>
+             <p>loading</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="content">
+             <img src="imgs/template.png" alt="Placeholder" style="width: 100%">
+             <h3>loading</h3>
+             <p>loading</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="content">
+             <img src="imgs/template.png" alt="Placeholder"style="width: 100%" >
+             <h3>loading</h3>
+             <p>loading</p>
+            </div>
+        </div>
+         </div>
+
+    <h2>Certifications:</h2>
+    <div class="row">
+        <div class="column">
+           <div class="content">
+            <img src="imgs/template.png" alt="Placeholder" style="width: 100%"/>
+            <h3> loading</h3>
+            <p>loading </p>
+           </div>
+       </div>
+      
+
+     
+
+
         </article>
 
         <footer>
            <p>	©Alana M. McCray</p>
-            <a href="#">Resume</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
-            <a class="active" href="#">Home</a>
+            <a href="resume.html">Resume</a>
+            <a class="active" href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+            <a href="index.html">Home</a>
         </footer>
     </body>
    <html
