--- a/resume.html
+++ b/resume.html
@@ -57,10 +57,10 @@
 
         <footer>
            <p>	©Alana M. McCray</p>
-            <a href="#">Resume</a>
+           <a href="#">Contact</a>
             <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
-            <a class="active" href="#">Home</a>
+            <a class="active" href="#">Resume</a>
+            <a href="index.html">Home</a>
         </footer>
     </body>
    <html
