--- a/portfolio.html
+++ b/portfolio.html
@@ -10,15 +10,19 @@
 
     <body>
         <!--Header-->
-
         <header>
             <h1>Alana M. McCray</h1>
             <h2>Student| Future Knight| Animal Lover</h2>
-            <a href="contact.html">Contact</a>
-            <a class="active" href="index.html">Portfolio</a>
-            <a href="resume.html">Resume</a>
-            <a href="index.html">Home</a>
         </header>
+
+        <!--Navbar-->
+        
+        <nav>
+            <a  href="index.html">Home</a>
+            <a href="resume.html">Resume</a>
+            <a class="active"href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+            </nav>
 
         <!--Main-->
 
