--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
         <header>
             <h1>Alana M. McCray</h1>
             <h2>Student| Future Knight| Animal Lover</h2>
-            <a href="contact.html">Contact</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="resume.html">Resume</a>
-            <a class="active" href="index.html">Home</a>
         </header>
+        
+        <!--Navbar-->
+        
+        <nav>
+            <a class="active" href="index.html">Home</a>
+            <a href="resume.html">Resume</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </nav>
 
         <!--Main-->
 
