--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <!--Header-->
         <header>
             <h1>Alana M. McCray</h1>
-            <h2>Student| Future Knight| Animal Lover</h2>
+            <h2>Student|Thinker| Animal Lover</h2>
         </header>
 
         <!--Navbar-->
