--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <!--Header-->
         <header>
             <h1>Alana M. McCray</h1>
-            <h2>Student| Future Knight| Animal Lover</h2>
+            <h2>Student| Thinker| Animal Lover</h2>
         </header>
 
         <!--Navbar-->
@@ -33,7 +33,7 @@
                 
                 
                 <div class="container">
-                    <form action="/action_page.php">
+                    <form action="https://formspree.io/f/xyyrdnjb" method="post">
                         <label for="name">Name</label>
                         <input
                         type="text"
