--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 
         <header>
             <h1>Alana M. McCray</h1>
-            <h2>Student| Future Knight| Animal Lover</h2>
+            <h2>Student| Thinker| Animal Lover</h2>
         </header>
 
         <!--Navbar-->
